[PLAT-614]: fix device-management map alignment

--- a/netmanager/src/assets/scss/device-management.sass
+++ b/netmanager/src/assets/scss/device-management.sass
@@ -1,3 +1,8 @@
+.container-wrapper
+  width: 98%
+  margin: 0 auto
+
+
 .card-container
   width: 13%
   min-width: 150px
@@ -107,8 +112,9 @@
   margin: 10px 0
 
 .map-container
-  width: 98%
-  margin: 0 auto
+  width: 100%
+  margin: 20px 0
+  position: relative
   height: calc(100vh - 300px)
 
 .m-device-uptime-row
